# swagger/swagger.json
@@ -1230,10 +1230,11 @@
         },
         "dto.ExtractAPIRequest": {
             "type": "object",
-            "required": [
-                "url"
-            ],
             "properties": {
+                "question": {
+                    "description": "Question is a free-text question to search the knowledge base.",
+                    "type": "string"
+                },
                 "url": {
                     "description": "URL is the target media link provided by the bot.",
                     "type": "string"
